themes/cgithub/theme.css
/* ... */
div#cgit table#header td.main a {
    color: var(--link-color);
}

div#cgit table#header td.sub,
div#cgit table#header td.main {
    color: var(--header-color);
    border: none;
}

div#cgit table.tabs {
    width: 100%;
    border-spacing: 0;
    margin-top: 0;
    background-color: var(--light-bg-color);
    border-bottom: var(--border-color) 1px solid;
}

div#cgit table.tabs td {
    padding: 0 var(--content-h-margin);
}

div#cgit table.tabs td.form {
    padding: 0 var(--content-h-margin) 0 0;
    text-align: right;
}

div#cgit table#header td {
    font-size: var(--font-size-small);
}

div#cgit table#header td.main {
    font-size: var(--font-size-header);
}

div#cgit table#header td,
div#cgit table#header td.logo {
    padding: 3px var(--content-h-margin);
    vertical-align: middle;
}

div#cgit table#header td.form {
    padding: 3px var(--content-h-margin);
    vertical-align: middle;
    text-align: right;
}

div#cgit table#header td.sub.right {
    display: none;
}

div#cgit table#header td.main,
div#cgit table#header td.sub {
    padding: 3px 0;
    vertical-align: middle;
}

div#cgit table#header td.logo img[src$="/cgit.png"] {
    filter: brightness(0) invert(1);
}

div#cgit table#header td.logo {
    width: 6rem;
}

@media (max-width: 600px) {
    div#cgit table#header td.logo img {
        max-width: 6rem;
    }
    div#cgit table#header td.main,
    div#cgit table#header td.sub.right,
    div#cgit table#header td.form input {
        white-space: normal;
        overflow-wrap: anywhere;
    }
    div#cgit table#header td.form form input[type="submit"] {
        display: none;
    }
    div#cgit table#header td.form select {
        max-width: 8rem;
        overflow: hidden;
        text-overflow: ellipsis;
    }
}

div#cgit table#header td.form,
div#cgit table.tabs td.form form {
    white-space: normal;
}

div#cgit table.tabs td.form form {
    padding: 0;
    margin: 0;
}

div#cgit table.tabs td {
    vertical-align: middle;
}

div#cgit table.tabs td a {
    color: var(--light-text-color);
    display: inline-block;
    font-size: 1rem;
    line-height: var(--size-header);
    border-radius: var(--border-radius);
    padding: 0 0.75rem;
    background-position: 0.75rem;
    background-size: 1rem;
    background-repeat: no-repeat;
    text-transform: capitalize;
    margin: 2px 0;
}

div#cgit table.tabs td a.active {
    color: var(--text-color);
    margin-bottom: 0;
    border-bottom: var(--menu-highlight-color) 2px solid;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    background-color: transparent;
}

div#cgit table.tabs td a:hover {
    text-decoration: none;
    background-color: var(--darker-bg-color);
    transition: background-color .12s ease-out
}

@media (min-width: 1336px) {
    div#cgit table#header td.logo,
    div#cgit table.tabs > tr > td:first-child,
    div#cgit table.tabs > tbody > tr > td:first-child {
        padding-left: calc(50vw - 640px);
    }
    div#cgit table#header tr td:last-child,
    div#cgit table.tabs td.form {
        padding-right: calc(50vw - 640px);
    }
}

/* inputs */

div#cgit table#header td.form form select,
div#cgit table#header td.form form input,
div#cgit table.tabs td.form select,
div#cgit table.tabs td.form input,
div#cgit div.cgit-panel td.ctrl select,
div#cgit div.cgit-panel td.ctrl input {
    border-radius: var(--border-radius);
    background-color: transparent;
    height: var(--font-size-header);
    font-size: var(--font-size-small);
    vertical-align: middle;
    margin: 2px 0 2px var(--inner-pad);
    padding: 0 var(--inner-pad);
}

div#cgit table#header td.form form select,
div#cgit table#header td.form form input {
    color: var(--header-color);
    border: var(--border-color) 1px solid;
}

div#cgit table#header td.form form select {
    max-width: 12rem;
}

div#cgit table.tabs td.form select,
div#cgit table.tabs td.form input,
div#cgit div.cgit-panel td.ctrl select,
div#cgit div.cgit-panel td.ctrl input {
    color: var(--text-color);
    border: var(--border-color) 1px solid;
    background-color: var(--darker-bg-color);
}

div#cgit table#header td.form form select:focus,
div#cgit table#header td.form form input:focus,
div#cgit table.tabs td.form select:focus,
div#cgit table.tabs td.form input:focus,
div#cgit div.cgit-panel td.ctrl select:focus,
div#cgit div.cgit-panel td.ctrl input:focus,
div#cgit table#header td.form form select:active,
div#cgit table#header td.form form input:active,
div#cgit table.tabs td.form select:active,
div#cgit table.tabs td.form input:active,
div#cgit div.cgit-panel td.ctrl select:active,
div#cgit div.cgit-panel td.ctrl input:active {
    border-color: var(--link-color);
}

div#cgit table#header td.form form input[type="submit"],
div#cgit table.tabs td.form input[type="submit"],
div#cgit div.cgit-panel td.ctrl input[type="submit"] {
    min-width: 6em;
    text-transform: capitalize;
}

/* icons */

div#cgit table.tabs td a {
    background-image: url('data:image/svg+xml,%3Csvg%20fill%3D%22%2359636e%22%20xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20width%3D%2216%22%3E%3Cpath%20d%3D%22M2%202.5A2.5%202.5%200%200%201%204.5%200h8.75a.75.75%200%200%201%20.75.75v12.5a.75.75%200%200%201-.75.75h-2.5a.75.75%200%200%201%200-1.5h1.75v-2h-8a1%201%200%200%200-.714%201.7.75.75%200%201%201-1.072%201.05A2.495%202.495%200%200%201%202%2011.5Zm10.5-1h-8a1%201%200%200%200-1%201v6.708A2.486%202.486%200%200%201%204.5%209h8ZM5%2012.25a.25.25%200%200%201%20.25-.25h3.5a.25.25%200%200%201%20.25.25v3.25a.25.25%200%200%201-.4.2l-1.45-1.087a.249.249%200%200%200-.3%200L5.4%2015.7a.25.25%200%200%201-.4-.2Z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
    padding-left: 2.25rem;
}
/* ... */

